--- a/app/views/layouts/_posts.html.erb
+++ b/app/views/layouts/_posts.html.erb
@@ -3,12 +3,12 @@
     <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
     <% if user_signed_in? && current_user.id != post.user_id %>
       <% if current_user.following?(post) %>
-        <%= link_to '&#10084;'.html_safe, favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
+        <%= link_to content_tag(:i, '', class: 'fas fa-heart'), favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
       --><% else %><!--
-        --><%= link_to '&#9825;'.html_safe, favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
+        --><%= link_to content_tag(:i, '', class: 'far fa-heart'), favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
       --><% end %><!--
     --><% else %><!--
-      --><span class="hearts">&hearts;</span><!--
+      --><i class="hearts fas fa-heart"></i><!--
     --><% end %><!--
     --><span class="sm horizontal hearts"><%= post.followers_by_type_count('User') %></span>
     <% user = User.find(post.user_id) %>
