--- a/app/views/posts/search_mine.html.erb
+++ b/app/views/posts/search_mine.html.erb
@@ -7,7 +7,7 @@
   <% @posts.each do |post| %>
     <p>
       <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
-      <span class="hearts">&#10084;</span><span class="sm horizontal hearts"><%= post.followers_by_type_count('User') %></span>
+      <i class="hearts fas fa-heart"></i><span class="sm horizontal hearts"><%= post.followers_by_type_count('User') %></span>
     </p>
   <% end %>
   <%= paginate @posts %>
