--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,19 +4,17 @@
   <%= link_to (image_tag @user.avatar.url(:medium), align: 'center'), user_path(id: @user.id), method: :get, class: 'tanka-link' %>&nbsp;
   <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'tanka-show tanka-link' %>&nbsp;
   <%= @post.created_at.strftime('%Y.%-m.%-d') %>&nbsp;
-  <% if Rails.env == 'production' %>
-    <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a' %>"><%= image_tag("http://utakata.s3.amazonaws.com/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
-  <% else %>
-    <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a' %>"><%= image_tag("/assets/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
+  <% if @user.twitter_id.present? %>
+    <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a' %>"><i class="fab fa-twitter"></i></a>&nbsp;
   <% end %>
   <% if user_signed_in? && current_user.id != @post.user_id %>
     <% if current_user.following?(@post) %>
-      <%= link_to '&#10084;'.html_safe, favorite_path(id: @post.id), method: :delete, class: 'hearts tanka-show' %><!--
+      <%= link_to content_tag(:i, '', class: 'fas fa-heart'), favorite_path(id: @post.id), method: :delete, class: 'hearts tanka-show' %><!--
     --><% else %><!--
-      --><%= link_to '&#9825;'.html_safe, favorites_path(follow: @post.id), method: :post, class: 'hearts tanka-show' %><!--
+      --><%= link_to content_tag(:i, '', class: 'far fa-heart'), favorites_path(follow: @post.id), method: :post, class: 'hearts tanka-show' %><!--
     --><% end %><!--
   --><% else %><!--
-    --><span class="hearts tanka-show">&hearts;</span><!--
+    --><i class="hearts tanka-show fas fa-heart"></i><!--
   --><% end %><!--
   --><%= link_to @post.followers_by_type_count('User'), follower_post_path(id: @post.id), method: :get, class: 'horizontal hearts tanka-show' %>
   <% if @user == current_user %>
