--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,8 @@
   <div class="margin-right">
     <%= image_tag @user.avatar.url(:original), align: 'center' %>&nbsp;
     <span class="tanka-show"><%= @user.name %></span>&nbsp;
-    <% if Rails.env == 'production' && @user.twitter_id.present? %>
-      <a href="<%= 'https://twitter.com/intent/follow?screen_name='  + @user.twitter_id %>"><%= image_tag("http://utakata.s3.amazonaws.com/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
-    <% elsif @user.twitter_id.present? %>
-      <a href="<%= 'https://twitter.com/intent/follow?screen_name=' + @user.twitter_id %>"><%= image_tag("/assets/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
+    <% if @user.twitter_id.present? %>
+      <a href="<%= 'https://twitter.com/intent/follow?screen_name='  + @user.twitter_id %>"><i class="fab fa-twitter"></i></a>&nbsp;
     <% end %>
     <% if user_signed_in? && current_user != @user %>
       <% if current_user.following?(@user) %>
@@ -31,12 +29,12 @@
       <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
       <% if user_signed_in? && current_user.id != post.user_id %>
         <% if current_user.following?(post) %>
-          <%= link_to '&#10084;'.html_safe, favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
+          <%= link_to content_tag(:i, '', class: 'fas fa-heart'), favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
         --><% else %><!--
-          --><%= link_to '&#9825;'.html_safe, favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
+          --><%= link_to content_tag(:i, '', class: 'far fa-heart'), favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
         --><% end %><!--
       --><% else %><!--
-        --><span class="hearts">&hearts;</span><!--
+        --><i class="hearts fas fa-heart"></i><!--
       --><% end %><!--
       --><span class="sm horizontal hearts"><%= post.followers_by_type_count('User') %></span>
     </p>
