--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,12 +7,12 @@
 
   <div class="field form-group mx-auto col-md-4">
     <%= f.label :password, "パスワード（6文字以上）" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password, autofocus: true, class: 'form-control' %>
   </div>
 
   <div class="field form-group mx-auto col-md-4">
     <%= f.label :password_confirmation, "パスワード（確認用）" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
 
   <div class="actions form-group mx-auto col-md-4">
