--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,12 +29,12 @@
 
   <div class="field form-group mx-auto col-md-4">
     <%= f.label :パスワード（6文字以上） %><br />
-    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password, class: 'form-control' %>
   </div>
 
   <div class="field form-group mx-auto col-md-4">
     <%= f.label :パスワード（確認用） %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
 
   <div class="form-group actions mx-auto col-md-4">
