--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,19 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+@font-face {
+  font-family: 'Font Awesome 5 Free';
+  font-style: normal;
+  font-weight: 900;
+  src: url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.eot'), '#{$fa-font-path}/fa-solid-900.eot'));
+  src: url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.eot#iefix'), '#{$fa-font-path}/fa-solid-900.eot#iefix')) format('embedded-opentype'),
+  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.woff2'), '#{$fa-font-path}/fa-solid-900.woff2')) format('woff2'),
+  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.woff'), '#{$fa-font-path}/fa-solid-900.woff')) format('woff'),
+  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.ttf'), '#{$fa-font-path}/fa-solid-900.ttf')) format('truetype'),
+  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.svg#fontawesome'), '#{$fa-font-path}/fa-solid-900.svg#fontawesome')) format('svg');
+  font-display: auto;
+}
+
 .navbar {
   background-color: #0095d9;
   padding-top: 0;
