--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,15 +4,10 @@
 @import "font-awesome";
 
 @font-face {
-  font-family: 'Font Awesome 5 Free';
+  font-family: "Font Awesome 5 Free";
   font-style: normal;
   font-weight: 900;
-  src: url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.eot'), '#{$fa-font-path}/fa-solid-900.eot'));
-  src: url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.eot#iefix'), '#{$fa-font-path}/fa-solid-900.eot#iefix')) format('embedded-opentype'),
-  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.woff2'), '#{$fa-font-path}/fa-solid-900.woff2')) format('woff2'),
-  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.woff'), '#{$fa-font-path}/fa-solid-900.woff')) format('woff'),
-  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.ttf'), '#{$fa-font-path}/fa-solid-900.ttf')) format('truetype'),
-  url(if($fa-sass-asset-helper, fa-font-path('#{$fa-font-path}/fa-solid-900.svg#fontawesome'), '#{$fa-font-path}/fa-solid-900.svg#fontawesome')) format('svg');
+  src: local("Font Awesome 5 Free"), url("https://utakatanka.jp/assets/font-awesome/fa-solid-900-08aa3a5ee68a21d5771a70b20495b6da1c0f996c46982cd1b0447ad2db730d11.woff2") format('woff2');
   font-display: auto;
 }
 
